email as username & comany added

--- a/user_panel/templates/sections/welcome.html
+++ b/user_panel/templates/sections/welcome.html
@@ -10,7 +10,7 @@
     <h2>Área de usuario</h2>
 
     <p>
-        Bienvenido <strong class="capitalize">{{request.user.username}}</strong>, 
+        Bienvenido <strong class="capitalize">{{ request.user.first_name }}</strong>, 
         esta página es exclusiva para usuarios registrados.
     </p>
 
