change password added

--- a/user_panel/templates/sections/welcome.html
+++ b/user_panel/templates/sections/welcome.html
@@ -13,7 +13,9 @@
         Bienvenido <strong class="capitalize">{{ request.user.first_name }}</strong>, 
         esta página es exclusiva para usuarios registrados.
     </p>
-
+    <div class="left">
+        <a class="get-started-btn" href="/accounts/password_change/">Cambiar clave</a>
+    </div>
     <hr />
 </div>
 </section>
