--- a/user_panel/templates/sections/welcome.html
+++ b/user_panel/templates/sections/welcome.html
@@ -16,6 +16,9 @@
     <div class="left">
         <a class="get-started-btn" href="/accounts/password_change/">Cambiar clave</a>
     </div>
+    <form method="post" enctype="multipart/form-data" style="width: 24rem;">
+        {{ form.document }}
+    </form>
     <hr />
 </div>
 </section>
