--- a/user_panel/templates/forms/field_selection.html
+++ b/user_panel/templates/forms/field_selection.html
@@ -7,15 +7,16 @@
         <h1 class="">Seleccione los campos correspondientes</h1>
         <p>Para poder modelar correctamente la data, necesitamos que se configuren correctamente los campos del archivo enviado. Tienes que hacer match en los siguientes cambios: Fecha, Código de producto y Cantidad de unidades vendidas. El campo de fecha debe ser a nivel de día por lo menos (si está por hora, minutos o segundo no hay problema).</p>
         <br><br><br><br>
-        <form class="card" method="post" enctype="multipart/form-data">
-        <div class="card-body">
-            
-                <form method="POST">
+        <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch"></div>
+        <form method="POST" enctype="multipart/form-data" class="field-selection-form">
+            <div class="card-body">
                 {% csrf_token %}
-                {{ form.as_table }}
-                </form>
-            <button class="btn btn-primary" type="submit">Enviar</button>
-        </div>
+                <div class="form-row">
+                    {{ form.as_table }}
+                </div>
+            </div>
+            <div class="mb-3">
+            <button class="btn btn-primary" type="submit">Guardar</button>
     </form>
     </div>
 </section>
