--- a/user_panel/templates/forms/field_selection.html
+++ b/user_panel/templates/forms/field_selection.html
@@ -11,6 +11,7 @@
         <form method="POST" enctype="multipart/form-data" class="field-selection-form">
             <div class="card-body">
                 {% csrf_token %}
+                File path: {{ url }}
                 <div class="form-row">
                     {{ form.as_table }}
                 </div>
