--- a/user_panel/templates/forms/field_selection.html
+++ b/user_panel/templates/forms/field_selection.html
@@ -5,7 +5,9 @@
 <section class="pt-4 pt-md-11">
     <div class="container">
         <h1 class="">Seleccione los campos correspondientes</h1>
-        <p>Para poder modelar correctamente la data, necesitamos que se configuren correctamente los campos del archivo enviado. Tienes que hacer match en los siguientes cambios: Fecha, Código de producto y Cantidad de unidades vendidas. El campo de fecha debe ser a nivel de día por lo menos (si está por hora, minutos o segundo no hay problema).</p>
+        <p>Para poder modelar correctamente la data, necesitamos que se configuren correctamente los campos del archivo enviado. 
+            Tienes que hacer match en los siguientes campos:
+        </p>
         <br><br><br><br>
         <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch"></div>
         <form method="POST" enctype="multipart/form-data" class="field-selection-form">
