deploy files and users welcome page fixed

--- a/user_panel/templates/sections/welcome.html
+++ b/user_panel/templates/sections/welcome.html
@@ -16,7 +16,7 @@
         esta página es exclusiva para usuarios registrados.
     </p>
     <br>
-    <form method="post" enctype="multipart/form-data" action="{% url 'field_selection' %}" style="width: 24rem;">
+    <form method="post" enctype="multipart/form-data" style="width: 24rem;">
         {% csrf_token %}
         {{ form.document }}
         <br>
