--- a/static/css/style.css
+++ b/static/css/style.css
@@ -472,6 +472,22 @@ h1, h2, h3, h4, h5, h6 {
     width: 50%;
   }
 }
+
+@media (max-width: 320px) {
+  #hero {
+    height: 130vh;
+  }
+  #hero .animated {
+    -webkit-animation: none;
+    animation: none;
+  }
+  #hero .hero-img {
+    text-align: center;
+  }
+  #hero .hero-img img {
+    width: 50%;
+  }
+}
 @-webkit-keyframes up-down {
   0% {
     transform: translateY(10px);
