--- a/static/css/style.css
+++ b/static/css/style.css
@@ -479,12 +479,12 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 400px) {
   #hero {
     height: 100vh;
-
+  }
 @media (max-width: 320px) {
   #hero {
     height: 130vh;
-
   }
+}
   #hero .animated {
     -webkit-animation: none;
     animation: none;
