--- a/landing/templates/header.html
+++ b/landing/templates/header.html
@@ -13,16 +13,15 @@
         <li><a href="/#portfolio">Como Funciona</a></li>
         <li><a href="/#contact">Contacto</a></li>
       </ul>
-    </nav><!-- .nav-menu -->
+    <!-- .
+    </nav>
     {% if request.user.is_authenticated %}
     <a class="get-started-btn" href="/user">Tu sitio</a>
     <a class="get-started-btn" href="/accounts/logout/?next=/">Cerrar Sesión</a>
-    <!-- <li><a href="/pr/register">Registrate</a></li>para mas adelante -->
     {% else %}
     <a class="get-started-btn" href="/accounts/login/?next=/user">Ingresa</a>
     {% endif %}
-    <!-- <a href="#contact" class="get-started-btn scrollto">Get Started</a> -->
-
+    -->
   </div>
 </header><!-- End Header -->
 
