--- a/landing/templates/header.html
+++ b/landing/templates/header.html
@@ -5,7 +5,7 @@
 
     <!-- <h1 class="logo mr-auto"><a href="/">Cactus Co.</a></h1> -->
     <!-- Uncomment below if you prefer to use an image logo -->
-    <a href="index.html" class="logo mr-auto"><img src="static/img/imagotipo_cactus.png" alt="" class="img-fluid"></a>
+    <a href="/" class="logo mr-auto"><img src="static/img/imagotipo_cactus.png" alt="" class="img-fluid"></a>
 
     <nav class="nav-menu d-none d-lg-block">
       <ul>
