--- a/static/css/quema.css
+++ b/static/css/quema.css
@@ -1,15 +1,24 @@
+/*By Rorro, Mic Drop.*/
+
+#cactusContainer{
+    margin: 10px;
+    display: block;
+}
 
 .cross-sells-carrousel {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-start;
     text-align: center;
     font-family: "Montserrat", Sans-serif;
-    height: 390px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
-.section-title{
-    position:absolute;
+
+.section-title h2{
+    font-weight: 600;
+    color: #333333;
+    font-size: 25px;
+    letter-spacing: 0.5px;
 }
 
 .section-products {
@@ -21,6 +30,7 @@
     font-family: "Montserrat", Sans-serif;
     position: relative;
     top: 30px
+    height: 390px;
 }
 
 .cross-sells-product {
@@ -58,7 +68,6 @@ img {
     letter-spacing: 0.5px;
     color: red;
     text-align: center;
-
 }
 
 .product-name-box{
