--- a/src/quema_script/quema_test_files/quema.css
+++ b/src/quema_script/quema_test_files/quema.css
@@ -8,7 +8,7 @@
 .cross-sells-carrousel {
     display: flex;
     text-align: center;
-    font-family: "inherit";
+    font-family: "Montserrat", Sans-serif;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
@@ -19,7 +19,6 @@
     color: #333333;
     font-size: 25px;
     letter-spacing: 0.5px;
-    border-bottom: 2px solid #0274be;
 }
 
 .section-products {
@@ -28,16 +27,16 @@
     justify-content: center;
     align-items: flex-start;
     text-align: center;
-    font-family: "inherit";
+    font-family: "Montserrat", Sans-serif;
     position: relative;
+    top: 30px
+    height: 390px;
 }
 
 .cross-sells-product {
     width:200px;
     height: 320px;
-	/*box-shadow: 2px 2px 30px rgba(0,0,0,0.2);*/
-    border:1px solid;
-    border-color: #ebebeb;
+	box-shadow: 2px 2px 30px rgba(0,0,0,0.2);
 	border-radius: 10px;
 	overflow: hidden;
 	margin: 10px;
@@ -69,6 +68,9 @@ img {
     letter-spacing: 0.5px;
     color: red;
     text-align: center;
+}
+
+.product-name-box{
 }
 
 .product-price-box{
