--- a/static/css/quema.css
+++ b/static/css/quema.css
@@ -9,18 +9,12 @@ header .site-header {
 }
 
 #cactusContainer .cross-sell-slider {
-    /*display: flex;
+    display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: center;*/
+    align-items: center;
     font-family: "Montserrat", Sans-serif;
     text-align: center;
-    width: 100%;
-    height: 400px;
-    position: relative;
-    margin: auto;
-    overflow-x: scroll;
-    overflow-y: hidden;
 }
 
 #cactusContainer .slider::-webkit-scrollbar {
@@ -34,32 +28,56 @@ header .site-header {
     letter-spacing: 0.5px;
 }
 
-#cactusContainer .cross-sell-slide {
-    /*
+#cactusContainer .cross-sell-slide-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 370px;
+    position: relative;
+    /*margin: auto;
+    overflow-x: scroll;
+    overflow-y: hidden;*/
+}
+
+/*#cactusContainer .cross-sell-slide {
+    
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
     text-align: center;
-    font-family: "Montserrat", Sans-serif;
-    position: relative;
-    */
     display: flex;
-    position: absolute;
+    position: relative;
     left: 0;
+    
+    position: relative;
+}*/
+
+#cactusContainer .cross-sell-slide-box .cross-sell-slide{
+    display: flex;
+    position: relative;
+    left: 0;
+    padding: 5px;
+    margin: auto;
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
 
 
-#cactusContainer .slider .cross-sell-product:last-child {
+#cactusContainer .cross-sell-slide-box .cross-sell-product:last-child {
     margin-right: 0;
   }  
 
   #cactusContainer .cross-sell-product {
-    width:200px;
+    width:200px; 
+    min-width:200px;
     height: 320px;
-	box-shadow: 2px 2px 30px rgba(0,0,0,0.2);
+    border: 1px solid;
+    border-color: #ebebeb;
+	box-shadow: 1px 1px 5px rgba(0,0,0,0.2);
 	border-radius: 10px;
-	overflow: hidden;
 	margin-right: 10px;
     position: relative;
     display: flex;
@@ -73,18 +91,20 @@ header .site-header {
 	width: 200px;
 	object-fit: cover;
 	box-sizing: border-box;
-    /*border: 1px solid;
+    
     border-radius: 10px;
-    border-color: #ebebeb;*/
-
+    /*border-color: #ebebeb;
+    border: 1px solid;*/
 }
 
 #cactusContainer .cross-sell-product .product-name {
     font-size: 15px;
-    font-weight: 350;
-    color:#222222;
+    font-weight: 600;
+    color: #929292;
 	letter-spacing: 0.5px;
-    margin: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: left;
   }
 
 #cactusContainer .cross-sell-product .product-price {
@@ -94,11 +114,11 @@ header .site-header {
     letter-spacing: 0.5px;
     color: red;
     text-align: center;
-    margin-bottom: 10px;
 }
 
 #cactusContainer .product-price-box{
     bottom: 0;
+    margin-bottom: 7px;
 }
 
 #cactusContainer .ctrl-btn {
@@ -113,8 +133,9 @@ header .site-header {
     text-align: center;
     cursor: pointer;
     outline: none;
-  
-    position: absolute;
+    margin: 5px;
+}
+    /*position: absolute;
     top: 55%;
     margin-top: -27.5px;
   }
@@ -125,5 +146,10 @@ header .site-header {
   
   #cactusContainer .ctrl-btn.pro-next {
     right: 0;
-  }
+  }*/
   
+@media only screen and (max-width: 600px) {
+    #cactusContainer .ctrl-btn {
+        display: none;
+        }
+    } 
