--- a/static/css/quema.css
+++ b/static/css/quema.css
@@ -31,6 +31,7 @@ header .site-header {
     width: 100%;
     height: 370px;
     position: relative;
+    max-width: 1140px;
     /*margin: auto;
     overflow-x: scroll;
     overflow-y: hidden;*/
