--- a/static/css/quema.css
+++ b/static/css/quema.css
@@ -22,6 +22,7 @@ header .site-header {
     color: #333333;
     font-size: 25px;
     letter-spacing: 0.5px;
+    margin-bottom: 0 !important;
 }
 
 #cactusContainer .cross-sell-slide-box {
@@ -32,25 +33,7 @@ header .site-header {
     height: 370px;
     position: relative;
     max-width: 1140px;
-    /*margin: auto;
-    overflow-x: scroll;
-    overflow-y: hidden;*/
 }
-
-/*#cactusContainer .cross-sell-slide {
-    
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-start;
-    text-align: center;
-    display: flex;
-    position: relative;
-    left: 0;
-    
-    position: relative;
-}*/
 
 #cactusContainer .cross-sell-slide-box .cross-sell-slide{
     display: flex;
@@ -98,14 +81,15 @@ header .site-header {
     border: 1px solid;*/
 }
 
-#cactusContainer .cross-sell-product .product-name {
+#cactusContainer .cross-sell-product .product-name{
     font-size: 15px;
     font-weight: 600;
     color: #929292;
 	letter-spacing: 0.5px;
     margin-left: 10px;
     margin-right: 10px;
-    text-align: left;
+    text-align: center;
+    margin-bottom: 0 !important;
   }
 
 #cactusContainer .cross-sell-product .product-price {
@@ -136,18 +120,6 @@ header .site-header {
     outline: none;
     margin: 5px;
 }
-    /*position: absolute;
-    top: 55%;
-    margin-top: -27.5px;
-  }
-  
-#cactusContainer .ctrl-btn.pro-prev {
-    left: 0;
-  }
-  
-  #cactusContainer .ctrl-btn.pro-next {
-    right: 0;
-  }*/
   
 @media only screen and (max-width: 600px) {
     #cactusContainer .ctrl-btn {
