diseño front pippa, y refactor codigo para agrupar todo en un container y mostrar solo la sección que tenga respuesta, bai

--- a/static/css/pippa.css
+++ b/static/css/pippa.css
@@ -119,8 +119,10 @@ header .site-header {
 @media only screen and (max-width: 600px) {
     #cactusContainer .ctrl-btn {
         display: none;
-        }
-    } 
+    }
+} 
+/*
 .cross-sell {
     display: none !important;
 }
+*/
