--- a/static/css/prat.css
+++ b/static/css/prat.css
@@ -32,7 +32,7 @@ header .site-header {
     width: 100%;
     height: 370px;
     position: relative;
-    max-width: 1140px;
+    max-width: 1400px;
 }
 
 #cactusContainer .slide-box .slide{
@@ -55,8 +55,8 @@ header .site-header {
   }  
 
   #cactusContainer .product {
-    width:200px; 
-    min-width:200px;
+    width:160px; 
+    min-width:160px;
     height: 320px;
     border: 1px solid;
     border-color: #ebebeb;
@@ -76,8 +76,8 @@ header .site-header {
 }
 
 #cactusContainer .product img {
-    height: 200px;
-	width: 200px;
+    height: 160px;
+	width: 160px;
 	object-fit: cover;
 	box-sizing: border-box;
     padding: 2px 2px 0 2px;
@@ -144,3 +144,20 @@ header .site-header {
         display: none;
         }
     } 
+
+.product-view {
+    position: relative;
+    margin-bottom: 20px;
+    padding-top: 5px;
+    max-width: 1400px; /* este */
+    margin: 0 auto;
+}
+
+.product-view .short-description {
+    border: none;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #9D9D9D;
+    display: none; /* este */
+}
