perf: webpack config production

--- a/landing/templates/demos.html
+++ b/landing/templates/demos.html
@@ -12,8 +12,6 @@
     <div id="app">
         <App></App>
     </div>
-    {% render_bundle 'main' 'js' %}
+    {% render_bundle 'main' %}
   </body>
 </html>
-
-
