--- a/landing/templates/sections/portfolio.html
+++ b/landing/templates/sections/portfolio.html
@@ -6,7 +6,7 @@
     <div class="section-title">
     <span>Ejemplo</span>
     <h2>Ejemplo</h2>
-    <p>Pone el mouse sobre los productos y click en más para ver los recomendados de cada producto</p>
+    <p>Pon el mouse sobre los productos y click en más para ver los recomendados de cada producto</p>
     </div>
     
 
