--- a/static/css/amantani.css
+++ b/static/css/amantani.css
@@ -95,17 +95,41 @@
     text-decoration: underline;
 }
 
+#cactusContainer .product-price-box{
+    bottom: 0;
+    margin-bottom: 7px;
+    display:flex;
+    flex-direction: column;
+}
+
 #cactusContainer .product .product-price {
     font-weight: 600;
     font-size: 20px;
     letter-spacing: 0.5px;
     color: black;
     text-align: center;
+    
 }
 
-#cactusContainer .product-price-box{
-    bottom: 0;
-    margin-bottom: 7px;
+#cactusContainer .product .product-discounted-price {
+    font-weight: 600;
+    color: #333333;
+    font-size: 20px;
+    letter-spacing: 0.5px;
+    color: red;
+    text-align: center;
+}
+
+#cactusContainer .product-discount {
+    position:absolute;
+    font-size: 17px;
+    background-color:red;
+    color: white;
+    top: 0;
+    right: 0;
+    margin: 7px 7px 0 0;
+    border-radius: 30px;
+    padding: 2px 10px 2px 10px;
 }
 
 #cactusContainer .ctrl-btn {
