--- a/static/css/pippa.css
+++ b/static/css/pippa.css
@@ -87,6 +87,13 @@ header .site-header {
     margin-top: 0 !important;
   }
 
+#cactusContainer .product-price-box{
+    bottom: 0;
+    margin-bottom: 7px;
+    display:flex;
+    flex-direction: column;
+}
+
 #cactusContainer .product .product-price {
     font-weight: normal;
     color: #5d5d5d;
@@ -95,9 +102,25 @@ header .site-header {
     text-align: center;
 }
 
-#cactusContainer .product-price-box{
-    bottom: 0;
-    margin-bottom: 7px;
+#cactusContainer .product .product-discounted-price {
+    font-weight: 600;
+    color: #333333;
+    font-size: 20px;
+    letter-spacing: 0.5px;
+    color: red;
+    text-align: center;
+}
+
+#cactusContainer .product-discount {
+    position:absolute;
+    font-size: 17px;
+    background-color:red;
+    color: white;
+    top: 0;
+    right: 0;
+    margin: 7px 7px 0 0;
+    border-radius: 30px;
+    padding: 2px 10px 2px 10px;
 }
 
 #cactusContainer .ctrl-btn {
