--- a/static/css/quema.css
+++ b/static/css/quema.css
@@ -18,9 +18,9 @@ header .site-header {
 }
 
 #cactusContainer .title h2{
-    font-weight: 600;
+    font-weight: 300;
     color: #333333;
-    font-size: 25px;
+    font-size: 24px;
     letter-spacing: 0.5px;
     margin-bottom: 0 !important;
 }
@@ -32,7 +32,7 @@ header .site-header {
     width: 100%;
     height: 370px;
     position: relative;
-    max-width: 1140px;
+    max-width: 1400px;
 }
 
 #cactusContainer .slide-box .slide{
@@ -55,8 +55,8 @@ header .site-header {
   }  
 
   #cactusContainer .product {
-    width:200px; 
-    min-width:200px;
+    width:160px; 
+    min-width: 160px;
     height: 320px;
     border: 1px solid;
     border-color: #ebebeb;
@@ -70,12 +70,17 @@ header .site-header {
     align-items: center;
   }
 
+#cactusContainer .product:hover {
+    border-color: red;
+    border-width: 2px;
+}
+
 #cactusContainer .product img {
-    height: 200px;
-	width: 200px;
+    height: 160px;
+	width: 160px;
 	object-fit: cover;
 	box-sizing: border-box;
-    
+    padding: 2px 2px 0 2px;
     border-radius: 10px;
     /*border-color: #ebebeb;
     border: 1px solid;*/
@@ -92,7 +97,14 @@ header .site-header {
     margin-bottom: 0 !important;
   }
 
-#cactusContainer .product .product-price {
+  #cactusContainer .product-price-box{
+    bottom: 0;
+    margin-bottom: 7px;
+    display:flex;
+    flex-direction: column;
+}
+
+  #cactusContainer .product .product-price {
     font-weight: 600;
     color: #333333;
     font-size: 20px;
@@ -101,9 +113,25 @@ header .site-header {
     text-align: center;
 }
 
-#cactusContainer .product-price-box{
-    bottom: 0;
-    margin-bottom: 7px;
+#cactusContainer .product .product-discounted-price {
+    font-weight: 600;
+    color: #333333;
+    font-size: 20px;
+    letter-spacing: 0.5px;
+    color: red;
+    text-align: center;
+}
+
+#cactusContainer .product-discount {
+    position:absolute;
+    font-size: 17px;
+    background-color:red;
+    color: white;
+    top: 0;
+    right: 0;
+    margin: 7px 7px 0 0;
+    border-radius: 30px;
+    padding: 2px 10px 2px 10px;
 }
 
 #cactusContainer .ctrl-btn {
