--- a/static/css/pippa.css
+++ b/static/css/pippa.css
@@ -114,7 +114,7 @@ header .site-header {
 #cactusContainer .product-discount {
     position:absolute;
     font-size: 17px;
-    background-color:red;
+    background-color: #d2328a;
     color: white;
     top: 0;
     right: 0;
